# azureml-pysdk2-template

./: .env_example  .gitignore  .pre-commit-config.yaml  README.md  README_TEMPLATE.md  amlenv.Dockerfile  build_pipeline.py  pyproject.toml
core/: __init__.py  _aml.py  _blob.py  ds_constants.py  settings.py  utils.py
core/build_/: __aml_env.py  __gen_metafile.py  __init__.py
src/: .amlignore  aml_pipeline_info.yaml
src/components/predict/: main.py  predict.py
src/components/preprocess/: main.py  prep.py
src/components/train/: main.py  train.py
